# anim_control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: anim.frag  anim.vert  anim_debug.frag  anim_debug.vert  skybox.frag  skybox.vert  text.frag  void_model.frag  void_model.vert
src/: anim.hpp  animation.cpp  animation.hpp  animation_controller.cpp  animation_controller.hpp  camera.cpp  camera.hpp  env.cpp  env.hpp  game.cpp  game.hpp  gameobject.cpp  gameobject.hpp  loader.cpp  loader.hpp  main.cpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  text_renderer.cpp  text_renderer.hpp  texture.hpp  vao.cpp  vao.hpp
textures/: skybox.psd
